# UniLume

./: .gitignore  AGENTS.md  AUTHORS.md  CMakeLists.txt  CONTRIBUTING.md  NOTICE  README.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  proposal.yml  task.yml
.github/workflows/: benchmark-smoke.yml  ci.yml  integration-smoke.yml  sanitizers.yml
benchmarks/: CMakeLists.txt
benchmarks/core/: benchmark_options.cpp  benchmark_options.h  benchmark_result.h  benchmark_types.h  burst_benchmark.cpp  burst_benchmark.h  checksum.cpp  checksum.h  corpus_loader.cpp  corpus_loader.h  correctness.cpp  correctness.h  engine_fixture.cpp  engine_fixture.h  latency_benchmark.cpp  latency_benchmark.h  main.cpp  report_writer.cpp  report_writer.h  rss_reader.cpp  rss_reader.h  soak_benchmark.cpp  soak_benchmark.h  statistics.cpp  statistics.h  system_metadata.cpp  system_metadata.h  throughput_benchmark.cpp  throughput_benchmark.h
benchmarks/corpus/: code_like.tsv  mixed.tsv  telex.tsv  unicode.tsv  urls_and_emails.tsv  viqr.tsv  vni.tsv
benchmarks/integration/: integration_benchmark_options.cpp  integration_benchmark_options.h  integration_benchmark_result.h  integration_benchmark_runner.cpp  integration_benchmark_runner.h  integration_report_writer.cpp  integration_report_writer.h  integration_session.cpp  integration_session.h  main.cpp
docs/: architecture.md  benchmarks.md  browser-input-policy.md  composition-span-research.md  fcitx5-addon.md  integration-testing.md  licensing.md  linux-adapter-design.md  provenance.md  real-application-validation.md  roadmap.md  stable-prefix.md  wayland-validation.md
docs/legacy/: README1ST  keymap-syntax  manual  options  unikeyrc
src/core/: direct_commit_controller.cpp  direct_commit_controller.h  engine_context.cpp  engine_context.h  key_input.h  key_result.h  preedit_fallback_controller.cpp  preedit_fallback_controller.h  replacement_transaction.cpp  replacement_transaction.h  transaction_metrics.h  utf8_validation.cpp  utf8_validation.h
src/fcitx5/: CMakeLists.txt  addon.cpp  addon.h  diagnostic_trace.cpp  diagnostic_trace.h  fcitx_key_mapper.cpp  fcitx_key_mapper.h  fcitx_replacement_backend.cpp  fcitx_replacement_backend.h  input_context_state.cpp  input_context_state.h  unilume-addon.conf.in  unilume-inputmethod.conf
src/platform/: input_mode_policy.cpp  input_mode_policy.h  replacement_backend.h
src/platform/simulation/: deterministic_backend.cpp  deterministic_backend.h
src/ukengine/: mactab.cpp  ukengine.cpp  ukengine.h  usrkeymap.cpp
src/ukinterface/: unikey.cpp  unikey.h  unilume_context.cpp  unilume_context.h
src/vnconv/: convert.cpp
tests/: CMakeLists.txt
tests/engine/: composition_span_counterexample_tests.cpp  editing_tests.cpp  engine_test.cpp  engine_test_main.cpp  input_tests.cpp  telex_tests.cpp  test_suites.h  unicode_invalid_input_tests.cpp  unicode_passthrough_tests.cpp  url_and_code_input_tests.cpp  viqr_tests.cpp  vni_tests.cpp
tests/engine/test_support/: engine_fixture.cpp  engine_fixture.h  test_context.cpp  test_context.h
tests/integration/: browser_capability_tests.cpp  browser_input_session_tests.cpp  burst_tests.cpp  delayed_surrounding_text_tests.cpp  deterministic_backend.cpp  deterministic_backend.h  duplicate_text_tests.cpp  immediate_tests.cpp  input_mode_policy_tests.cpp  integration_fixture.cpp  integration_fixture.h  integration_test_main.cpp  preedit_fallback_tests.cpp  test_assertions.cpp  test_assertions.h  test_suites.h  transaction_tests.cpp
tests/manual-apps/: browser-input-probe.html  wayland-check.sh
